fix: improve the appearance of dark mode and make sure the github-trending post is pinned

--- a/my-blog-frontend/src/index.css
+++ b/my-blog-frontend/src/index.css
@@ -415,6 +415,10 @@ html.dark-mode .button.is-dark {
   color: white !important;
 }
 
+html.dark-mode .button.is-light {
+  color: #333 !important;
+}
+
 /* 播放器卡片 */
 html.dark-mode .aplayer {
   background: transparent !important;
